@@ -8,7 +8,6 @@ gtkmm_files_extra_cc =			\
 	accelkey.cc			\
 	accelmap.cc			\
 	cellrenderer_generation.cc	\
-	comboboxentrytext.cc		\
 	comboboxtext.cc			\
 	listviewtext.cc			\
 	object.cc \
@@ -26,7 +25,6 @@ gtkmm_files_extra_h =			\
 	base.h				\
 	border.h			\
 	cellrenderer_generation.h	\
-	comboboxentrytext.h		\
 	comboboxtext.h			\
 	listviewtext.h			\
 	object.h \
