@@ -1,7 +1,7 @@
 // -*- c++ -*-
 /* $Id: combobox.ccg,v 1.9 2006/05/10 20:59:27 murrayc Exp $ */
 
-/* 
+/*
  *
  * Copyright 2003 The gtkmm Development Team
  *
@@ -28,6 +28,16 @@
 namespace Gtk
 {
 
+ComboBox::ComboBox(bool has_entry)
+:
+  _CONSTRUCT("has-entry", gboolean(has_entry))
+{}
+
+ComboBox::ComboBox(const Glib::RefPtr<TreeModel>& model, bool has_entry)
+:
+  _CONSTRUCT("model", Glib::unwrap(model), "has-entry", gboolean(has_entry))
+{}
+
 void ComboBox::unset_active()
 {
   gtk_combo_box_set_active(gobj(), -1 /* see GTK+ docs */);
@@ -45,7 +55,7 @@ TreeModel::iterator ComboBox::get_active()
     //It must be given the model, because the C++ wrapper has extra information.
     iter.set_model_gobject(model->gobj());
   }
-  
+
   return iter;
 }
 
@@ -89,4 +99,3 @@ void ComboBox::unset_row_separator_func()
 }
 
 } // namespace Gtk
-
