@@ -1,7 +1,7 @@
 /* $Id: combobox.hg,v 1.17 2006/09/19 20:08:42 murrayc Exp $ */
 
 /* combobox.h
- * 
+ *
  * Copyright (C) 2003 The gtkmm Development Team
  *
  * This library is free software; you can redistribute it and/or
@@ -36,15 +36,15 @@ namespace Gtk
 
 /** A widget used to choose from a list of items.
  *
- * A ComboBox is a widget that allows the user to choose from a list of valid choices. The ComboBox displays the 
- * selected choice. When activated, the ComboBox displays a popup which allows the user to make a new choice. The 
- * style in which the selected value is displayed, and the style of the popup is determined by the current theme. 
+ * A ComboBox is a widget that allows the user to choose from a list of valid choices. The ComboBox displays the
+ * selected choice. When activated, the ComboBox displays a popup which allows the user to make a new choice. The
+ * style in which the selected value is displayed, and the style of the popup is determined by the current theme.
  * It may be similar to a OptionMenu, or similar to a Windows-style combo box.
  *
- * The ComboBox uses the model-view pattern; the list of valid choices is specified in the form of a tree model, 
- * and the display of the choices can be adapted to the data in the model by using cell renderers, as you would in 
- * a tree view. This is possible since ComboBox implements the CellLayout interface. The tree model holding the 
- * valid choices is not restricted to a flat list, it can be a real tree, and the popup will reflect the tree 
+ * The ComboBox uses the model-view pattern; the list of valid choices is specified in the form of a tree model,
+ * and the display of the choices can be adapted to the data in the model by using cell renderers, as you would in
+ * a tree view. This is possible since ComboBox implements the CellLayout interface. The tree model holding the
+ * valid choices is not restricted to a flat list, it can be a real tree, and the popup will reflect the tree
  * structure.
  *
  * The ComboBox widget looks like this:
@@ -63,11 +63,20 @@ class ComboBox
   _IMPLEMENTS_INTERFACE(CellLayout)
   _IMPLEMENTS_INTERFACE(CellEditable)
 public:
-  _CTOR_DEFAULT()
-  
-  /** Creates a new ComboBox with the model initialized to @a model.
+
+  /** Creates a new empty #GtkComboBox, optionally with an entry.
+   * @param has_entry If this is true then this will have an Entry widget.
    */
-  _WRAP_CTOR(ComboBox(const Glib::RefPtr<TreeModel>& model), gtk_combo_box_new_with_model)
+  explicit ComboBox(bool has_entry = false);
+  _IGNORE(gtk_combo_box_new_with_entry)
+
+  /** Creates a new ComboBox with the model initialized to @a model.
+   * @param model The model containing data to display in the ComboBox.
+   * @param has_entry If this is true then this will have an Entry widget.
+   */
+  explicit ComboBox(const Glib::RefPtr<TreeModel>& model, bool has_entry = false);
+  _IGNORE(gtk_combo_box_new_with_model)
+
   _IGNORE(gtk_combo_box_new, gtk_combo_box_new_text) //See ComboBoxText for an equivalent of gtk_combo_box_new_text().
 
 
@@ -96,16 +105,16 @@ public:
    * @result The iterator.
    */
   TreeModel::iterator get_active();
-  
+
   /** Gets an iterator that points to the current active item, if it exists.
    * @result The iterator.
    */
   TreeModel::const_iterator get_active() const;
   _IGNORE(gtk_combo_box_get_active_iter)
-    
+
   _WRAP_METHOD(void set_active(int index), gtk_combo_box_set_active)
   _WRAP_METHOD(void set_active(const TreeModel::iterator& iter), gtk_combo_box_set_active_iter)
-  
+
   /** Causes no item to be active. See also set_active().
    */
   void unset_active();
@@ -122,15 +131,15 @@ public:
    */
   void unset_model();
 
-  typedef TreeView::SlotRowSeparator SlotRowSeparator;  
-  
-  /** Sets the row separator function, which is used to determine whether a row should be drawn as a separator. 
+  typedef TreeView::SlotRowSeparator SlotRowSeparator;
+
+  /** Sets the row separator function, which is used to determine whether a row should be drawn as a separator.
    * See also unset_row_separator_func().
-   * 
+   *
    * @param slot The callback.
    */
   void set_row_separator_func(const SlotRowSeparator& slot);
-  
+
   /** Causes no separators to be drawn.
    */
   void unset_row_separator_func();
@@ -138,6 +147,11 @@ public:
 
   _WRAP_METHOD(void set_button_sensitivity(SensitivityType sensitivity), gtk_combo_box_set_button_sensitivity)
   _WRAP_METHOD(SensitivityType get_button_sensitivity() const, gtk_combo_box_get_button_sensitivity)
+
+
+  _WRAP_METHOD(bool get_has_entry() const, gtk_combo_box_get_has_entry)
+  _WRAP_METHOD(void set_entry_text_column(int text_column), gtk_combo_box_set_entry_text_column)
+  _WRAP_METHOD(int get_entry_text_column() const, gtk_combo_box_get_entry_text_column)
 
   _WRAP_METHOD(void popup(), gtk_combo_box_popup)
   _WRAP_METHOD(void popup(const Glib::RefPtr<Gdk::Device>& device), gtk_combo_box_popup_for_device)
@@ -162,17 +176,16 @@ public:
 
   /** The changed signal gets emitted when the active
    * item is changed. This can be due to the user selecting
-   * a different item from the list, or due to a 
+   * a different item from the list, or due to a
    * call to set_active_iter().
    */
   _WRAP_SIGNAL(void changed(), "changed")
 
   //Key-binding signals:
   _IGNORE_SIGNAL("move-active")
-  _IGNORE_SIGNAL("popup")  
-  _IGNORE_SIGNAL("popdown")                                           
+  _IGNORE_SIGNAL("popup")
+  _IGNORE_SIGNAL("popdown")
 };
 
 
 } // namespace Gtk
-
