@@ -1,50 +1,0 @@
-// -*- c++ -*-
-/* $Id: comboboxentry.ccg,v 1.2 2004/10/10 20:41:20 murrayc Exp $ */
-
-/* 
- *
- * Copyright 2003 The gtkmm Development Team
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free
- * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- */
-
-#include <gtk/gtk.h>
-
-namespace Gtk
-{
-
-
-Entry* ComboBoxEntry::get_entry()
-{
-  return Glib::wrap((GtkEntry*)(gtk_bin_get_child((GtkBin*)gobj())));
-}
-
-const Entry* ComboBoxEntry::get_entry() const
-{
-  GtkBin* base = (GtkBin*)const_cast<GtkComboBoxEntry*>(gobj());
-  return Glib::wrap((GtkEntry*)(gtk_bin_get_child(base)));
-}
-
-Glib::ustring ComboBoxEntry::get_active_text() const
-{
-  //gtk_combo_box_get_active_text() can be used with text-comboboxes, 
-  //or GtkComboBoxEntry, which is quite stupid. murrayc:
-  return Glib::convert_return_gchar_ptr_to_ustring (gtk_combo_box_get_active_text(GTK_COMBO_BOX(gobj())));
-}
-
-
-
-} // namespace Gtk
-
