@@ -52,7 +52,6 @@ gtkmm_files_any_hg =		\
 	colorbutton.hg		\
 	colorselection.hg	\
 	combobox.hg	\
-	comboboxentry.hg	\
 	container.hg		\
 	dialog.hg		\
 	drawingarea.hg		\
