@@ -1,5 +1,16 @@
 2010-10-14  Murray Cumming  <murrayc@murrayc.com>
 
+	Remove ComboBoxEntry and ComboBoxEntryText.
+
+	* gtk/src/comboboxentry.[h|ccg]: Remove this because it has been replaced
+  with a has-entry construct-time property.
+	* gtk/gtkmm/comboboxentrytext.[h|cc]: Remove this because it derives
+  from ComboBoxEntry. People should use ComboBoxText instead.
+  * gtk/src/combobox.hg: Changed constructors to add an optional has_entry
+  parameter.
+
+2010-10-14  Murray Cumming  <murrayc@murrayc.com>
+
 	Remove WrapBox.
 
   * gtk/src/filelist.am:
